--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -65,6 +65,7 @@
   "addRecordConfirmTitle": "Add Record?",
   "addRecordConfirmMessage": "Confirm adding this record?",
   "manageRules": "Manage Rules",
+  "rules": "Rules",
   "deleteRuleTitle": "Delete Rule?",
   "deleteRuleConfirm": "Delete \"{name}\"?",
   "newRule": "New Rule",
